# myhome-tools

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  README.md  Taskfile.yml  docker-compose.yml  package.json  pnpm-lock.yaml
.cursor/: README.md
.cursor/rules/: backend.mdc  docs.mdc  frontend.mdc  infra.mdc  project.mdc
.storybook/: main.ts
auth/: .llmignore  jest.config.cjs  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
auth/__tests__/: handler.test.ts
auth/src/: check-auth.tpl.ts  index.tpl.ts
backend/: .env.example  .gitignore  .llmignore  Pipfile  README.md  alembic.ini  alembic_app.ini  alembic_ns.ini  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_create_users.py
backend/alembic_app/: env.py
backend/alembic_app/versions/: 35f26f898dcc_init.py  629a34234c76_init.py  680913b490c9_initial_schema.py  bd81d91e2808_add_default_namespace.py
backend/alembic_ns/: env.py
backend/alembic_ns/versions/: dece98001b44_init.py
backend/app/: __init__.py  auth.py  config.py  create_admin.py  db.py  main.py  models.py  schemas.py  security.py
backend/docs/: database.dbml
backend/myhome_tools/: settings.py
backend/myhome_tools/api/depends/: jwt.py  type.py
backend/myhome_tools/api/exceptions/: conflict.py
backend/myhome_tools/api/utils/: funcs.py  me.py  token.py
backend/myhome_tools/api/v1/: me.py  ns.py  root.py  shopping.py
backend/myhome_tools/db/: engine.py  init_database.py  model.py
backend/myhome_tools/db/models/: __init__.py  app.py  ns.py
backend/tasks/: package_layer.py  package_main.py  sample_token.py
docker/: backend.prod.Dockerfile  dev.Dockerfile  frontend.prod.Dockerfile  nginx.dev.conf
docs/: README.md  architecture.md  open-questions.md  roadmap.md
docs/application/: api.md  (+4 more)
front/: .env.local.template  .env.template  .gitignore  .llmignore  README.md  generate_llm_input.ts  package.json  pnpm-lock.yaml  vite.config.ts
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
llm/: .gitignore  main.ts  package.json  pnpm-lock.yaml
src/: Button.stories.tsx  Button.tsx  main.tsx
terraform/: .editorconfig  .env.tmplate  .gitignore  .llmignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  package.json  pnpm-lock.yaml  pre.ps1  variables.tf
(+113 files in other folders)
