[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "mangum>=0.19.0",
    "pydantic>=2.11.0",
    "taskipy>=1.14.1",
    "uvicorn>=0.34.0",
]

[tool.taskipy.tasks]
start = "uvicorn main:app --port=8888 --reload"
