[project]
name = "myhome-tools-backend"
version = "0.1.0"
description = "FastAPI backend for myhome-tools"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.0",
  "bcrypt==4.0.1",
  "fastapi>=0.115.0",
  "email-validator>=2.2.0",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.2.0",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.12",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.32.0",
]

[dependency-groups]
dev = [
  "ruff>=0.8.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
